Fix controls bar track info not being clickable on mobile landscape layout
The progress info element was much wider than necessary, overlapping
with the track info (although all the content of the progress info
element was in its right end). This made it almost impossible to click
the track info to scroll to the current track.

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -137,7 +137,6 @@
 	left: auto;
 	padding-top: 12px;
 	text-align: right;
-	width: inherit;
 }
 
 /* in portrait, there's even less space */
